deploy: 1367aec00218d4a32563f0f7eaee3a87b4cd8e4a

--- a/main/tutorials/h_rabi_oscillations.ipynb
+++ b/main/tutorials/h_rabi_oscillations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "511cc763",
+   "id": "f280eaf6",
    "metadata": {},
    "source": [
     "# Rabi Oscillations\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd3e057e",
+   "id": "cabed784",
    "metadata": {},
    "source": [
     "NOTE: It is a good idea to get familiar with orbital lists by consulting the tutorial first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b318f657",
+   "id": "e0a4eb0b",
    "metadata": {},
    "source": [
     "## Building a two-level system\n",
@@ -31,13 +31,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "08f8e349",
+   "id": "6b3e0af9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:03.685053Z",
-     "iopub.status.busy": "2025-03-18T10:06:03.684566Z",
-     "iopub.status.idle": "2025-03-18T10:06:04.870945Z",
-     "shell.execute_reply": "2025-03-18T10:06:04.870436Z"
+     "iopub.execute_input": "2025-04-07T14:19:00.761198Z",
+     "iopub.status.busy": "2025-04-07T14:19:00.760975Z",
+     "iopub.status.idle": "2025-04-07T14:19:02.100050Z",
+     "shell.execute_reply": "2025-04-07T14:19:02.099276Z"
     }
    },
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b30c55",
+   "id": "db88d6fe",
    "metadata": {},
    "source": [
     "We study undamped time evolution under harmonic illumination. Here, we use the rotating wave approximation (RWA) in the field -- two-level-system coupling:"
@@ -64,13 +64,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f75a24cb",
+   "id": "9c65caa7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:04.873149Z",
-     "iopub.status.busy": "2025-03-18T10:06:04.872829Z",
-     "iopub.status.idle": "2025-03-18T10:06:09.278694Z",
-     "shell.execute_reply": "2025-03-18T10:06:09.278071Z"
+     "iopub.execute_input": "2025-04-07T14:19:02.102957Z",
+     "iopub.status.busy": "2025-04-07T14:19:02.102580Z",
+     "iopub.status.idle": "2025-04-07T14:19:07.161493Z",
+     "shell.execute_reply": "2025-04-07T14:19:07.160879Z"
     }
    },
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d05a08ba",
+   "id": "00ed0424",
    "metadata": {},
    "source": [
     "## Coupling to a Flake"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e54cd9e",
+   "id": "d6c352d1",
    "metadata": {},
    "source": [
     "We combine the TLS with a graphene flake in the top position above a selected carbon atom."
@@ -133,13 +133,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a83acc55",
+   "id": "58e90b31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:09.280647Z",
-     "iopub.status.busy": "2025-03-18T10:06:09.280285Z",
-     "iopub.status.idle": "2025-03-18T10:06:11.594848Z",
-     "shell.execute_reply": "2025-03-18T10:06:11.593873Z"
+     "iopub.execute_input": "2025-04-07T14:19:07.163463Z",
+     "iopub.status.busy": "2025-04-07T14:19:07.163281Z",
+     "iopub.status.idle": "2025-04-07T14:19:09.820298Z",
+     "shell.execute_reply": "2025-04-07T14:19:09.818539Z"
     }
    },
    "outputs": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "933571c3",
+   "id": "45a28eff",
    "metadata": {},
    "source": [
     "We set the couplings and inspect the resulting energy levels"
@@ -187,13 +187,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "530f02d4",
+   "id": "8e98fe00",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:11.597240Z",
-     "iopub.status.busy": "2025-03-18T10:06:11.597023Z",
-     "iopub.status.idle": "2025-03-18T10:06:14.189780Z",
-     "shell.execute_reply": "2025-03-18T10:06:14.189222Z"
+     "iopub.execute_input": "2025-04-07T14:19:09.823851Z",
+     "iopub.status.busy": "2025-04-07T14:19:09.822725Z",
+     "iopub.status.idle": "2025-04-07T14:19:12.874661Z",
+     "shell.execute_reply": "2025-04-07T14:19:12.874124Z"
     }
    },
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34c3f63",
+   "id": "a0b6351d",
    "metadata": {},
    "source": [
     "Identify the energy gap"
@@ -224,13 +224,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6247c95f",
+   "id": "fc4f87ca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:14.191731Z",
-     "iopub.status.busy": "2025-03-18T10:06:14.191357Z",
-     "iopub.status.idle": "2025-03-18T10:06:14.396756Z",
-     "shell.execute_reply": "2025-03-18T10:06:14.396266Z"
+     "iopub.execute_input": "2025-04-07T14:19:12.876745Z",
+     "iopub.status.busy": "2025-04-07T14:19:12.876362Z",
+     "iopub.status.idle": "2025-04-07T14:19:13.086050Z",
+     "shell.execute_reply": "2025-04-07T14:19:13.085503Z"
     }
    },
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c974e42d",
+   "id": "10da6479",
    "metadata": {},
    "source": [
     "The time evolution of the composite system is obtained as follows"
@@ -250,13 +250,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba6cbedc",
+   "id": "bb741b69",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:14.399063Z",
-     "iopub.status.busy": "2025-03-18T10:06:14.398696Z",
-     "iopub.status.idle": "2025-03-18T10:06:16.915230Z",
-     "shell.execute_reply": "2025-03-18T10:06:16.914553Z"
+     "iopub.execute_input": "2025-04-07T14:19:13.088433Z",
+     "iopub.status.busy": "2025-04-07T14:19:13.088231Z",
+     "iopub.status.idle": "2025-04-07T14:19:16.056469Z",
+     "shell.execute_reply": "2025-04-07T14:19:16.055828Z"
     }
    },
    "outputs": [
@@ -264,7 +264,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RHS compiled\n",
+      "RHS compiled\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "RHS compiled\n"
      ]
     },
