--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22d68eee",
+   "id": "c5f108fb",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45dcff2b",
+   "id": "8cf806f5",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c0ecaa",
+   "id": "1cac65a8",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b4d488",
+   "id": "2ac6c0a8",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79193e81",
+   "id": "948f78b2",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459adcf1",
+   "id": "426f2c6c",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "589e1a1d",
+   "id": "17e3d4a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:06:59.414257Z",
-     "iopub.status.busy": "2025-03-18T10:06:59.414078Z",
-     "iopub.status.idle": "2025-03-18T10:07:02.362494Z",
-     "shell.execute_reply": "2025-03-18T10:07:02.361806Z"
+     "iopub.execute_input": "2025-04-07T14:20:05.345076Z",
+     "iopub.status.busy": "2025-04-07T14:20:05.344876Z",
+     "iopub.status.idle": "2025-04-07T14:20:08.674092Z",
+     "shell.execute_reply": "2025-04-07T14:20:08.673459Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "471eacb6",
+   "id": "7662252c",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d9f9da",
+   "id": "b41e1ca0",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b5c146",
+   "id": "b45f0a87",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c604237d",
+   "id": "ceab46a9",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "772e302c",
+   "id": "c9820963",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4848bd98",
+   "id": "efa8cd84",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520b4172",
+   "id": "d37a13d7",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0f5130",
+   "id": "1aaff223",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0122357a",
+   "id": "c82097b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:02.364849Z",
-     "iopub.status.busy": "2025-03-18T10:07:02.364578Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.440315Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.439780Z"
+     "iopub.execute_input": "2025-04-07T14:20:08.676211Z",
+     "iopub.status.busy": "2025-04-07T14:20:08.675902Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.096816Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.096243Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1bbe741",
+   "id": "3bbf26a8",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f2e38e38",
+   "id": "59dda1c8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.442199Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.442014Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.445786Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.445317Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.098839Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.098641Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.102135Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.101449Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a5593b",
+   "id": "dd2f45dd",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2767ce",
+   "id": "ba3d62e8",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7d4999c",
+   "id": "bb42e4c0",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0cdabbe",
+   "id": "97ed454f",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1f675295",
+   "id": "13ba59cb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.447716Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.447403Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.493285Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.492696Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.104104Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.103757Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.152232Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.151649Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5653c25d",
+   "id": "aa7930e1",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "128344e1",
+   "id": "b00ce9d1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.495222Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.494840Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.566950Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.566424Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.154274Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.153911Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.222083Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.221454Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3cd54d6",
+   "id": "6b7e4f57",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "347900ac",
+   "id": "ba334a18",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c590a43c",
+   "id": "ced7014f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.568931Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.568563Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.597578Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.597071Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.224403Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.224016Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.255952Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.255372Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a41de164",
+   "id": "0834e6e4",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91dd6ca3",
+   "id": "3665f436",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ec5057",
+   "id": "ede67c13",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4673a7",
+   "id": "60e76bc3",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d380c124",
+   "id": "d150bffc",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4aad0ad7",
+   "id": "d8b359e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.599640Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.599277Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.603349Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.602733Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.258152Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.257896Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.262116Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.261514Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2adbcc13",
+   "id": "9c2f3522",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d44c5e2a",
+   "id": "aca82298",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.605231Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.605054Z",
-     "iopub.status.idle": "2025-03-18T10:07:04.608175Z",
-     "shell.execute_reply": "2025-03-18T10:07:04.607551Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.264042Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.263721Z",
+     "iopub.status.idle": "2025-04-07T14:20:11.266515Z",
+     "shell.execute_reply": "2025-04-07T14:20:11.266016Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79d5ef9d",
+   "id": "161b08bc",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f16edd91",
+   "id": "1bc0dfa2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:04.609930Z",
-     "iopub.status.busy": "2025-03-18T10:07:04.609602Z",
-     "iopub.status.idle": "2025-03-18T10:07:07.192065Z",
-     "shell.execute_reply": "2025-03-18T10:07:07.191442Z"
+     "iopub.execute_input": "2025-04-07T14:20:11.268164Z",
+     "iopub.status.busy": "2025-04-07T14:20:11.267970Z",
+     "iopub.status.idle": "2025-04-07T14:20:14.027821Z",
+     "shell.execute_reply": "2025-04-07T14:20:14.027120Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db24458",
+   "id": "95396916",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b3f052f",
+   "id": "3fea91a2",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753b5b64",
+   "id": "828cbffe",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d6526e7",
+   "id": "e0c29da1",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d0bdfacd",
+   "id": "218fff17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:07.194088Z",
-     "iopub.status.busy": "2025-03-18T10:07:07.193717Z",
-     "iopub.status.idle": "2025-03-18T10:07:07.197379Z",
-     "shell.execute_reply": "2025-03-18T10:07:07.196745Z"
+     "iopub.execute_input": "2025-04-07T14:20:14.030239Z",
+     "iopub.status.busy": "2025-04-07T14:20:14.029719Z",
+     "iopub.status.idle": "2025-04-07T14:20:14.033492Z",
+     "shell.execute_reply": "2025-04-07T14:20:14.033028Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f7a13f353a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f3cebf50900>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56df61bc",
+   "id": "1c324e28",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf42b651",
+   "id": "9db5474e",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde24964",
+   "id": "cdf8dce1",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c25fd7c",
+   "id": "5da58483",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d7ad53fd",
+   "id": "fad3deed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:07.199338Z",
-     "iopub.status.busy": "2025-03-18T10:07:07.199018Z",
-     "iopub.status.idle": "2025-03-18T10:07:07.201934Z",
-     "shell.execute_reply": "2025-03-18T10:07:07.201384Z"
+     "iopub.execute_input": "2025-04-07T14:20:14.035527Z",
+     "iopub.status.busy": "2025-04-07T14:20:14.035158Z",
+     "iopub.status.idle": "2025-04-07T14:20:14.038462Z",
+     "shell.execute_reply": "2025-04-07T14:20:14.037873Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "953da7ee",
+   "id": "a386ea6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-18T10:07:07.203828Z",
-     "iopub.status.busy": "2025-03-18T10:07:07.203410Z",
-     "iopub.status.idle": "2025-03-18T10:07:08.259323Z",
-     "shell.execute_reply": "2025-03-18T10:07:08.258768Z"
+     "iopub.execute_input": "2025-04-07T14:20:14.040319Z",
+     "iopub.status.busy": "2025-04-07T14:20:14.039864Z",
+     "iopub.status.idle": "2025-04-07T14:20:15.150484Z",
+     "shell.execute_reply": "2025-04-07T14:20:15.149924Z"
     }
    },
    "outputs": [
